# ch32v00x-hal-template

./: Cargo.toml  README.md
src/: main.rs
